# cookie_os

./: .gitignore  Makefile  debug.sh  devcheck.sh  grub.cfg  kernel_logging_enabled.txt  limine.conf  makedev.sh  makerelease.sh
kernel/: Makefile
kernel/arch/x86_64-elf/: boot.intel.asm  contextswitch.intel.asm  linker.ld  longmode.intel.asm  make.config  realmode.intel.asm
kernel/arch/x86_64-elf/rust/: Cargo.toml.merge  target.json
kernel/arch/x86_64-elf/rust/src/: interrupts.rs  lowlevel.rs
kernel/arch/x86_64-elf/rust/src/lowlevel/: interrupts.rs  mod.rs
kernel/rust/: Cargo.toml
kernel/rust/.cargo/: config.toml
kernel/rust/_old/coredrivers/display/: vga_x86.rs
kernel/rust/_old/coredrivers/system/: xapic_x86_64.rs
kernel/rust/_old/lowlevel/x86_64/: context_switch.rs  mod.rs
kernel/rust/_old/memory/: global_pages.rs  kernel_heap.rs  paging_api.rs
kernel/rust/_old/multitasking/: mod.rs  scheduler.rs  task.rs
kernel/rust/_old/sync/: mod.rs
kernel/rust/arch_x86_64/: Cargo.toml
kernel/rust/arch_x86_64/src/: context_switch.rs  controlflow.rs  lib.rs
kernel/rust/kapi/: Cargo.toml
kernel/rust/kapi/src/: lib.rs  scheduler.rs
kernel/rust/kcore/: Cargo.toml
kernel/rust/kcore/src/: lib.rs  logging.rs  status.rs  util.rs
kernel/rust/kcore/src/forward/: mod.rs  scheduler.rs
kernel/rust/kcore/src/sync/: cpulocal.rs  mod.rs  spin.rs
kernel/rust/src/: descriptors.rs  lib.rs  logging.rs  panic.rs  serial.rs  sync.rs  util.rs  vga_buffer.rs
kernel/rust/src/coredrivers/: mod.rs
kernel/rust/src/coredrivers/base/: mmio32.rs
kernel/rust/src/coredrivers/display/: vga_x86.rs
kernel/rust/src/coredrivers/keyboard/: ps2_x86_64.rs
kernel/rust/src/coredrivers/parser/: acpi_tables.rs  multiboot.rs
kernel/rust/src/coredrivers/serial/: uart_x86_64.rs
kernel/rust/src/coredrivers/system/: acpi_tables.rs  xapic_smp_x86_64.rs  xapic_x86_64.rs
kernel/rust/src/cpu/: mod.rs
kernel/rust/src/cpu/arch/x86_64/: featureflags.rs  gdt.rs  interrupts.rs  mod.rs  undefined_interrupt_handler_impl.rs
kernel/rust/src/lowlevel/: gdt.rs  lowlevel.rs  mod.rs
kernel/rust/src/lowlevel/x86_64/: apic.rs  context_switch.rs  featureflags.rs  gdt.rs  interrupts.rs  lowlevel.rs  mod.rs  multiboot.rs  smp.rs
kernel/rust/src/memory/: alloc_util.rs  global_pages.rs  kernel_heap.rs  mod.rs  paging_api.rs  paging_firstfit.rs  paging_nodeeper.rs  paging_x64.rs  physical.rs  stack.rs  unified.rs  virtual.rs
kernel/rust/src/memory/paging/: api.rs  global_pages.rs  mod.rs  sealed.rs  strategy.rs  tlb.rs  virtual.rs
kernel/rust/src/memory/paging/allocators/: firstfit.rs  mod.rs  nodeeper.rs
kernel/rust/src/memory/paging/arch/: x86_64.rs
kernel/rust/src/multitasking/: cpulocal.rs  cpunum.rs  econtext.rs  fixedcpulocal.rs  interruptions.rs  mod.rs  scheduler.rs  task.rs  util.rs
kernel/rust/src/multitasking/arch/x86_64/: context_switch.rs  cpunum.rs  enable_interrupts.rs  fixedcpulocal.rs  mod.rs
kernel/rust/src/scheduler/: allocation.rs  context_switch.rs  ktask.rs  mod.rs  multicore.rs  task.rs
kernel/rust/src/serial/: mod.rs  serial.rs  serial_impl.rs
kernel/rust/src/sync/: baselocks.rs  cpulocal.rs  hspin.rs  kspin.rs  llspin.rs  mod.rs  nointerruptionslocks.rs  promise.rs  queue.rs  spin.rs  spinlocks.rs  waitlist.rs  wlock.rs  yspin.rs
kernel/rust_old/src/: descriptors.rs  lib.rs
kernel/rust_old/src/coredrivers/: mod.rs
kernel/rust_old/src/coredrivers/keyboard/: ps2_x86_64.rs
kernel/rust_old/src/coredrivers/parser/: acpi_tables.rs
kernel/rust_old/src/coredrivers/system/: xapic_x86_64.rs
kernel/rust_old/src/lowlevel/x86_64/: gdt.rs  mod.rs  smp.rs
kernel/rust_old/src/memory/: mod.rs  physical.rs
kernel/rust_old/src/multitasking/: interruptions.rs  mod.rs  task.rs
kernel/rust_old/src/sync/: cpulocal.rs  mod.rs  promise.rs  spin.rs  waitlist.rs  wlock.rs  yspin.rs
libsyscalls/: Cargo.toml  liblib.rlib
libsyscalls/src/: lib.rs  macros.rs  marshal.rs  safety.rs  syscalls.rs
libsyscalls/src/abi/: x86_64.rs
libsyscalls/src/cookie/: mod.rs  syscalls.rs
libsyscalls/src/syscore/: marshal.rs  mod.rs  syscalls.rs
libsysinvoke/: Cargo.toml  Makefile  target-x86_64-elf.json
libsysinvoke/src/: lib.rs
