[package]
name = "kernel_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
buddy_system_allocator = "0.10.0"
volatile = "0.2.6"
spin = "0.9.8"
uart_16550 = "0.3.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.1"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[features]
# Logging features
# These only affect Debug/Info log levels
# Log levels WARN and up are always displayed
"logging.beep" = []  # log beep is for testing the logging system and should not be used
"logging.memory" = ["logging.memory.physical", "logging.memory.kheap"]
 "logging.memory.physical" = []
  "logging.memory.physical.memmap" = []  # mem map is not enabled by default for memory.physical as it's very verbose
  "logging.memory.physical.buddies" = []  # buddies is not enabled by default for memory.physical as it's very verbose
 "logging.memory.kheap" = []

# Force enable debug logging, even on release builds
"logging.forceenabledebug" = []

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
