[package]
name = "kernel_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
buddy_system_allocator = "0.10.0"
volatile = "0.2.6"
spin = "0.9.8"
uart_16550 = "0.3.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15.1"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[features]
# Enables 1GiB Huge Pages on x86_64 systems. This is a relatively new feature and is not supported by all CPUs.
1G_huge_pages = []

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
