[package]
name = "arch_x86_64"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.15.1"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
raw-cpuid = { git = "https://github.com/CrazySqueak/rust-cpuid.git", branch = "os_test_2" }

kapi = { path = "../kapi" }

[features]
1G_huge_pages = []
per_page_NXE_bit = []
page_global_bit = []
enable_amd64_TCE = []
